--- a/index.html
+++ b/index.html
@@ -55,10 +55,15 @@
 {
   "imports": {
     "react": "https://esm.sh/react@18.2.0",
-    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client"
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "vite": "https://aistudiocdn.com/vite@^7.1.12",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "url": "https://aistudiocdn.com/url@^0.11.4"
   }
 }
 </script>
+
 <link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-gray-900 text-gray-100">
@@ -436,7 +441,15 @@
               React.createElement('div', { className: "card-fade-in", style: { animationDelay: '400ms' } }, React.createElement(History, { history: history, onClear: clearHistory }))
             ),
             React.createElement('footer', { className: "text-center mt-12 text-gray-500 text-sm" },
-              React.createElement('p', null, "2025 Teds World Projects Toolbox v1.1")
+              React.createElement('p', null, "2025 Teds World Projects Toolbox v1.1"),
+              React.createElement('p', { className: "mt-1" },
+                React.createElement('a', {
+                  href: "https://youtube.com/@tedsworldprojects",
+                  target: "_blank",
+                  rel: "noopener noreferrer",
+                  className: "hover:text-cyan-400 transition-colors"
+                }, "youtube.com/@tedsworldprojects")
+              )
             )
           )
         );
